manifests/sonarqube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /sonar
          pathType: Prefix
          backend:
            service:
              name: sonarqube
              port:
                number: 9000
